--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # Site wide configuration
 
-title: Academic Website of Ted Laderas
+title: Website of Ben Orwoll
 locale: en_US
 logo: # filename of a logo image that has been placed into your images directory
 
 # Enter the following platform usernames if you would like for them to appear on your site.
 owner:
-  name: Ted Laderas
+  name: Ben Orwoll
   avatar: bio-photo.jpg
   bio: "This is a sample Jekyll academic website."
-  email: laderast@ohsu.edu
+  email: orwollb@ohsu.edu
   # Do not include the @ symbol in your Twitter username
-  twitter: laderast
+  twitter: benhmin
   linkedin: #username
-  github: laderast
-  orcid: # ID Number (ex. 0000-0000-0000-0000)
+  github: benhmin
+  orcid: 0000-0002-5023-3385 # ID Number (ex. 0000-0000-0000-0000)
   researchgate: #username
   mendeley: #username
   google:
